--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -28,7 +28,8 @@ button {
 }
 .board {
   display: flex;
-  height: 50em;
+  height: 400px;
+  width: 400px;
   justify-content: center;
   flex-flow: row wrap;
   margin: auto;
